finished home page

--- a/style.css
+++ b/style.css
@@ -1,17 +1,422 @@
 /*Theme Name: 'ENX2 Template'
 Author: Phil Trout
-Version: 1.0*/
+Versin: 1.0*/
 
 *{
 	margin: 0;
 	padding: 0;
 	border: 0;
 	outline: none;
-	font-family: 'Titillium Web', sans-serif;
+	font-family: sans-serif;
 	line-height: 18px;
 }
+
 html, body 
 {
     overflow-x: hidden;
 	height: 100%;
+	font-size: 15px;
+
+}
+h1
+{
+	font-size: 2.8em;
+	text-align: center;
+	padding-top: 80px;
+	font-weight: 200;
+	color: #45987f;
+	line-height: 40px;
+}
+
+h2
+{
+	color: #fff !important;
+	font-size: 1.333em;
+}
+h3
+{
+	
+}
+h4
+{}
+.container
+{
+	width: 98%;
+	max-width: 1200px;
+	margin: 0 auto; 
+}
+nav
+{
+	padding: 25px 0px;
+}
+nav ul
+{
+	display: flex;
+	justify-content: center;
+	list-style: none;
+}
+
+nav ul li a
+{
+	font-size: 1.067em;
+	text-decoration: none;
+	color: #fff;
+	border-left: 1px solid rgb(255, 255, 255, 0.1);
+	padding: 25px 43px;
+}
+nav ul li:last-child a
+{
+	border-right: 1px solid rgb(255, 255, 255, 0.1);
+} 
+.navBg
+{
+	background: #102640;
+	position: relative;
+}
+.burger
+{
+	display: none;
+}
+.burger div
+{
+	width: 25px;
+	height: 3px;
+	background-color: #fff;
+	margin: 5px;
+	margin-left: auto;
+	margin-right: 5px;
+	transition: all 0.3s ease;
+}
+.bg
+{
+	background-image: url("images/background.png");
+	min-height: 830px;
+	height: 100%;
+	width: 100%;
+	background-size: cover;
+	background-position-x: center;
+}
+.header
+{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 30px 0px;
+}
+.firstHeader 
+{
+ width: 900px;
+}
+.firstHeader p
+{
+	padding-top: 40px;
+	line-height: 30px;
+	font-size: 1.467em;
+	text-align: center;
+}
+.practiceArea
+{
+	display: flex;
+	flex-wrap: wrap;
+	padding: 30px 0px 0px 30px;
+    margin-top: 100px;
+	background-color: #f8f0e5;
+}
+.practiceArea>div
+{
+	width: 48%;
+	margin-bottom: 50px; 
+	margin-right: 10px;
+}
+.practiceArea h2
+{
+	margin-bottom: 15px;
+	margin-top: 15px;
+	color: #45987f !important;
+}
+.practiceArea p 
+{
+	line-height: 17px;
+	font-size: 1em;
+}
+
+.circleImg
+{
+	width: 100px;
+	height: 100px;
+	margin-right: 25px;
+    position: relative;
+    overflow: hidden;
+	border-radius: 50%;
+	float: left;
+}
+
+.circleImg img
+{
+	height: 100%;
+	width: auto;
+	position: relative;
+    right: 35px;
+    margin: 0 auto;
+}
+
+.bottomSection
+{
+	display: flex;
+	margin: 80px auto;
+}
+.bottomSection>div
+{
+	width: 50%;
+}
+.bottomSection>div>p
+{
+	margin-bottom: 40px;
+	line-height: 24px;
+	font-size: 1em;
+}
+.imageBottom
+{
+	width: 400px;
+	height: 400px;
+	margin-right: 25px;
+    position: relative;
+    overflow: hidden;
+	border-radius: 50%;
+	float: right;
+}
+.imageBottom img
+{
+	height: 100%;
+	width: auto;
+	position: relative;
+    right: 90px;
+    margin: 0 auto;
+}
+.footer1
+{
+	background: #45987f;
+	padding: 15px 0;
+}
+.footerContainer
+{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.footer1 li
+{
+	list-style: none;
+}
+.footerNav ul li
+{
+	display: inline;
+}
+.footerNav ul li a
+{
+	color: #fff;
+	border-right: 1px solid #fff;
+	text-decoration: none;
+	padding: 0px 12px;
+	font-size: 0.933em;
+}
+.footerNav ul li:last-child a
+{
+	border-right: none;
+}
+.footerSocial ul li
+{
+	display: inline;
+}
+.footer2
+{
+	background: #102640;
+}
+.footer2 div p
+{
+	color: #fff;
+	padding: 53px 0px;
+	font-size: 0.867em;
+}
+/************ END OF MAIN PAGE*****************/
+
+/************RESPONSIVE************************/
+@media screen and (max-width:1213px)
+{
+	nav ul li a {
+		padding: 25px 3vw;
+	}
+}
+@media screen and (max-width:1085px)
+{
+	nav ul li a {
+		padding: 25px 2vw;
+	}
+}
+@media screen and (max-width:1023px)
+{
+	.practiceArea 
+	{
+		justify-content: center;
+	}
+	.practiceArea>div 
+	{
+		width: 90%;
+	}
+}
+@media screen and (max-width:970px)
+{
+	.footerContainer
+	{
+		flex-direction: column;
+		justify-content: center;
+	}
+	
+	.footerNav
+	{
+		margin-bottom: 20px; 
+		text-align: center;
+	}
+	.footerNav ul li a{
+		display: inline-block;
+		line-height: 26px;
+		border: none;
+	}
+
+}
+@media screen and (max-width:910px)
+{
+	.firstHeader 
+	{
+		width: 80%;
+	}
+	.bottomSection>div 
+	{
+		width: 90%;
+	}
+	.bottomSection 
+	{
+		flex-wrap: wrap;
+	}
+	.imageBottom 
+	{
+		float: none;
+		margin: 0 auto;
+	}
+	.bottomSection 
+	{
+		justify-content: center;
+	}
+
+	.nav-links
+	{
+		position: absolute;
+		right: 0px;
+		height: 93vh;
+		top: 7vh;
+		background-color: #102640;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		width: 45%;
+		transform: translateX(100%);
+		transition: transform 0.5s ease-in;
+	}
+	nav li
+	{
+		opacity: 0;
+	}
+	nav ul li a {
+		border:none;
+	}
+	nav ul li:last-child a {
+		border-right: none;
+	}
+	.burger
+	{
+		display: block;
+	}
+
+}
+@media screen and (max-width:620px)
+{
+	.header 
+	{
+		display: block;
+		padding: 30px 20px;
+	}
+	.header h2
+	{
+		margin-top: 20px;
+	}
+	.header img
+	{
+		width: 250px;
+	}
+}
+@media screen and (max-width:530px)
+{
+	.imageBottom {
+		width: 300px;
+		height: 300px;
+	}
+	.nav-links {
+		width: 100%;
+	}
+}
+@media screen and (max-width:480px)
+{
+	.practiceArea 
+	{
+		padding: 30px 10px 0px 10px;
+	}
+}
+@media screen and (max-width:450px)
+{
+	.practiceArea h2 
+	{
+		margin-top: 5px;
+	}
+	
+	.practiceArea p 
+	{
+		display: flex;
+	}
+}
+@media screen and (max-width:330px)
+{
+	.imageBottom {
+		width: 250px;
+		height: 250px;
+	}
+}
+
+.nav-active{
+	transform: translateX(0%);
+}
+
+@keyframes navLinkFade
+{
+	from{
+		opacity: 0;
+		transform: translateX(50px);
+	}
+	to{
+		opacity: 1;
+		transform: translateX(0px);
+	}
+}
+.toggle .line1
+{
+	transform: rotate(-45deg) translate(-5px,6px);
+}
+.toggle .line2
+{
+	opacity: 0;
+}
+.toggle .line3
+{
+	transform: rotate(45deg) translate(-5px,-6px);
+
 }
