--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav
 nav ul
 {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	list-style: none;
 }
 
@@ -62,7 +62,7 @@ nav ul li a
 	text-decoration: none;
 	color: #fff;
 	border-left: 1px solid rgb(255, 255, 255, 0.1);
-	padding: 25px 43px;
+	padding: 25px 41px;
 }
 nav ul li:last-child a
 {
@@ -244,13 +244,13 @@ nav ul li:last-child a
 @media screen and (max-width:1213px)
 {
 	nav ul li a {
-		padding: 25px 3vw;
+		padding: 25px 31px;
 	}
 }
 @media screen and (max-width:1085px)
 {
 	nav ul li a {
-		padding: 25px 2vw;
+		padding: 25px 17px;
 	}
 }
 @media screen and (max-width:1023px)
@@ -312,8 +312,8 @@ nav ul li:last-child a
 	{
 		position: absolute;
 		right: 0px;
-		height: 93vh;
-		top: 7vh;
+		height: 94vh;
+		top: 6vh;
 		background-color: #102640;
 		display: flex;
 		flex-direction: column;
